# SaralDB

./: .gitignore  Cargo.toml  README.md  docker.local.yml  package.json  readme.md  saraldbfile.md  tailwind.config.js
api/: package.json
client/: next-sitemap.config.js  next.config.mjs  package.json  tailwind.config.js
client/public/: robots.txt  sitemap-0.xml
client/src/app/: globals.css  layout.jsx
client/src/app/(auth)/: layout.jsx
client/src/app/(dashboard)/: layout.jsx
client/src/app/(marketing)/: layout.jsx  page.jsx
client/src/app/docs/: layout.jsx  page.jsx
client/src/components/Scroll/: CompanyStrip.jsx
client/src/components/layout/: Container.jsx  DashboardFooter.jsx  DashboardHeader.jsx  Footer.jsx  Header.jsx
client/src/lib/: docs.js  highlight.js
client/src/store/: useAppStore.js
data/default/: users.bdb
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/api/: mod.rs
engine/src/kernel/: mod.rs
infra/docker/: api.Dockerfile  web.Dockerfile
server/: docker-compose.yml  package.json  setup.sh
server/prisma/: schema.prisma
server/src/: app.js  server.js
server/src/middleware/: auth.js  rbac.js  tenant.js
src/: main.rs
src/app/: layout.jsx  page.jsx
src/app/pricing/: page.jsx
src/collection/: collection.rs
src/components/layout/: Footer.jsx  Header.jsx
src/components/sections/: Hero.jsx
src/document/: document.rs
src/memory/: memtable.rs
src/storage/: engine.rs  file.rs  mod.rs  record.rs
web/: jsconfig.json  package.json
web/public/: sitemap.xml
web/src/app/: globals.css  layout.jsx  page.jsx
(+32 files in other folders)
